--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,14 +18,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
+
       - name: Install dependencies
-      - run: npm ci
+        run: npm ci
+
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
