--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,12 +29,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Create Release Pull Request or Publish
-        id: changesets
-        uses: changesets/action@v1
-        with:
-         publish: npm run ci:publish
+      - name: Update version
+        run: npx changeset version
+
+      - name: Build
+        run: npm run build
+
+      - name: Publish
+        run: npm publish --access public
         env:
-         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
