chore: add repository url for provenance validation

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "rtfp",
   "version": "0.0.0",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SkyCode-1/RTFP.git"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
