--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,7 +42,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "actions@github.com"
-          git add package.json CHANGELOG.md
+          git add package.json CHANGELOG.md .changeset/
           git commit -m "chore: bump version via changesets [skip ci]" || echo "No changes to commit"
           git push
 
