--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typecheck": "tsc --noEmit",
     "build": "tsup",
     "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "test": "vitest run",
     "ci:publish": "changeset publish"
   },
