--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,19 +32,38 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check for changeset
+        id: changeset_status
+        run: |
+          if [ "$(npx changeset status --output json | jq '.releases | length')" -eq 0 ]; then
+            echo "No changesets found. Skipping versioning."
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Update version
+        if: steps.changeset_status.outputs.skip == 'false'
         run: npx changeset version
 
       - name: Build
         run: npm run build
 
       - name: Commit version bump
+        if: steps.changeset_status.outputs.skip == 'false'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "actions@github.com"
           git add package.json CHANGELOG.md .changeset/
           git commit -m "chore: bump version via changesets [skip ci]" || echo "No changes to commit"
           git push
+
+      - name: Create Git tag
+        if: steps.changeset_status.outputs.skip == 'false'
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          git tag v$VERSION
+          git push origin v$VERSION
 
       - name: Publish
         run: npm publish --access public
