--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,28 +32,22 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Check for changeset
-        id: changeset_status
-        run: |
-          RELEASE_COUNT=$(npx changeset status --output=json | jq '.releases | length' || echo 0)
+      - name: Установка jq
+        run: sudo apt update && sudo apt install -y jq
 
-          if [ -z "$RELEASE_COUNT" ] || [ "$RELEASE_COUNT" -eq 0 ]; then
-            echo "No changesets found. Skipping versioning."
-            echo "skip=true" >> $GITHUB_OUTPUT
-          else
-            echo "Found $RELEASE_COUNT changeset(s)."
-            echo "skip=false" >> $GITHUB_OUTPUT
-          fi
+      - name: Запуск скрипта проверки Changeset
+        id: check_changes
+        run: ./scripts/check_changeset.sh
 
       - name: Update version
-        if: steps.changeset_status.outputs.skip == 'false'
+        if: steps.check_changes.outputs.SHOULD_PUBLISH == 'true'
         run: npx changeset version
 
       - name: Build
         run: npm run build
 
       - name: Commit version bump
-        if: steps.changeset_status.outputs.skip == 'false'
+        if: steps.check_changes.outputs.SHOULD_PUBLISH == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "actions@github.com"
@@ -62,14 +56,14 @@ jobs:
           git push
 
       - name: Create Git tag
-        if: steps.changeset_status.outputs.skip == 'false'
+        if: steps.check_changes.outputs.SHOULD_PUBLISH == 'true'
         run: |
           VERSION=$(node -p "require('./package.json').version")
           git tag v$VERSION
           git push origin v$VERSION
 
       - name: Publish
-        if: steps.changeset_status.outputs.skip == 'false'
+        if: steps.check_changes.outputs.SHOULD_PUBLISH == 'true'
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
