--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,12 +32,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Установка jq
-        run: sudo apt update && sudo apt install -y jq
-
       - name: Запуск скрипта проверки Changeset
         id: check_changes
-        run: ./scripts/check_changeset.sh
+        run: ./scripts/check-changeset.sh
+
+      - name: Показать текущую директорию и содержимое
+        run: |
+          pwd # Покажет текущую рабочую директорию
+          ls -F # Покажет содержимое текущей директории (файлы и папки)
+          ls -F scripts/ # Покажет содержимое папки scripts/
 
       - name: Update version
         if: steps.check_changes.outputs.SHOULD_PUBLISH == 'true'
